init iron flower

--- a/src/main/resources/assets/fantasbee/lang/en_us.json
+++ b/src/main/resources/assets/fantasbee/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "block.fantasbee.mysterious_beehive": "Mysterious beehive"
+  "block.fantasbee.mysterious_beehive": "Mysterious beehive",
+  "block.fantasbee.iron_flower": "Iron flower"
 }
