--- a/src/main/resources/assets/fantasbee/lang/en_us.json
+++ b/src/main/resources/assets/fantasbee/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "block.fantasbee.mysterious_beehive": "Mysterious beehive",
+  "block.fantasbee.common_beehive": "Common beehive",
   "block.fantasbee.iron_flower": "Iron flower",
   "block.fantasbee.coal_flower": "Coal flower"
 }
